kubernetes/apps/blanca-web/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: blanca-dental-care
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
